src/tests/code/pass/pass_operator_increment.u
entrypoint:~()
{
	iErrorCode:~i64{33};
	++iErrorCode;
}
->(iErrorCode)