src/tests/code/fail/fail_duplicate_function_name.u
add: (i1:i64, i2:i64)->(i64{i1+i2}) 
add: (i3:i64, i4:i64)->(i64{i3+i4})